webcleaner (0.30) unstable; urgency=low

  * wcheaders, webcleanerconf: only enable() edit/remove buttons when
    they can do something
  * more advert filters
  * use string methods where possible

 -- Bastian Kleineidam <calvin@debian.org>  Sat,  1 Dec 2001 11:36:28 +0100

webcleaner (0.29) unstable; urgency=low

  * wcheaders:
    - distinguish between incoming and outgoing headers for the onlyfirst
      option
    - catch URLErrors (they are thrown when the proxy is not running)
  * new header filter for Accept* headers (default disabled)
  * setup.py
    - adjust .bat files on Windows to be executable out-of-the-box
    - use "libxml2" as libxml library name on Windows
    - use os.getcwd(), not "."
  * compile fix for Windows in htmlsax.c
  * minor debug output improvements
  * use Pythons internal gettext module, get rid of fintl.py
  * remove webcleaner.bat, we only need webcleanerconf.bat for Windows

 -- Bastian Kleineidam <calvin@debian.org>  Thu, 29 Nov 2001 15:59:53 +0100

webcleaner (0.28) unstable; urgency=low

  * fix another flush error when self.attrs is not set
  * use re.sub() in Replacer.py, this is much faster

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 21 Nov 2001 19:45:18 +0100

webcleaner (0.27) unstable; urgency=low

  * wcheaders option window improvements
  * on Debian use init.d script for proxy start/stop/restart in
    webcleanerconf

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 21 Nov 2001 11:00:53 +0100

webcleaner (0.26) unstable; urgency=low

  * fix flushing in proxy
  * updated german .po file

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 17 Nov 2001 14:04:05 +0100

webcleaner (0.25) unstable; urgency=low

  * wcheaders: scrolling fix
  * flush data if server is closed
  * more quoting in .xml files
  * use buffering in the replacer

 -- Bastian Kleineidam <calvin@debian.org>  Fri, 16 Nov 2001 10:07:08 +0100

webcleaner (0.24) unstable; urgency=low
